--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ main {
   display: none;
   position: absolute;
   background-color: #f4f4f4;
-  min-width: 300px;
+  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 100;
   text-align: left;
@@ -106,6 +106,10 @@ main {
 .dropdown:hover .dropbtn {
   color: #343434;
   background-color: #f4f4f4;
+}
+
+.show {
+  display: block;
 }
 
 span {
@@ -177,7 +181,7 @@ span {
 }
 
 .images-menu-container a:hover img {
-  transform: scale(1.01);
+  transform: scale(1.0);
   transition: transform 0.3s ease;
 }
 
@@ -240,7 +244,7 @@ span {
 }
 
 .images-gallery img:hover {
-  transform: scale(1.05);
+  transform: scale(1.01);
 }
 
 .modal {
