--- a/css/styles.css
+++ b/css/styles.css
@@ -336,23 +336,30 @@ span {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 20px;
   margin-top: 50px;
 }
 
 .video-wrapper {
-  flex: 1 0 calc(50% - 20px);
+  flex: 1 1 calc(50% - 20px);
+  max-width: calc(50% - 20px);
   box-sizing: border-box;
-  padding: 10px;
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+  height: 0;
 }
 
-.video-wrapper video {
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
-.video-container p {
-  font-size: 1rem;
+.video-wrapper p {
   text-align: center;
+  font-size: 1rem;
 }
 
 .day-description-videos {
@@ -406,4 +413,11 @@ span {
   .video-wrapper {
     flex: 1 0 100%;
 }
+}
+
+@media (max-width: 768px) {
+  .video-wrapper {
+      flex: 1 1 100%;
+      max-width: 100%;
+  }
 }
